--- a/about.html
+++ b/about.html
@@ -15,8 +15,9 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>内不欺己，外不欺人，上不欺天。<br>
-        君子所以慎独。</p></blockquote>
+    <blockquote><p>冰冻三尺 非一日之寒<br>
+        积土成山 非斯须之作</p></blockquote>
+
 
     <p>Hey，我是<strong>王石磊(fsoooo)</strong>，一只后端程序猿，现在工作在帝都。</p>
 
