--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://fsoooo.githun.io/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/fsoooo">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/910c6f95a495">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>
+        与 <a href="http://fsoooo.githun.io/">Jekyll</a> 搭建的 个人博客。
+        我在GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与 简书主页<a href="https://http://www.jianshu.com/u/910c6f95a495">👉fsoooo</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
