--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "内不欺己，外不欺人，上不欺天。君子所以慎独。"
 ---
 
 {% for post in paginator.posts %}
