--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Fsoooo's Blog."
-header-img: "img/post-bg-rwd.jpg"
+description: "Hey, this is fsoooo's Blog."
+header-img: "img/about-bg.jpg"
+multilingual: true
 ---
 
 <!-- Language Selector -->
@@ -24,7 +25,7 @@ header-img: "img/post-bg-rwd.jpg"
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>
-        与 <a href="http://fsoooo.githun.io/">Jekyll</a> 搭建的 个人博客。
+        与 <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。
         我在GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与 简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉fsoooo</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
