--- a/about.html
+++ b/about.html
@@ -105,8 +105,8 @@ multilingual: true
 <!-- Gitalk 评论 start  -->
 {% if site.gitalk.enable %}
 <!-- Gitalk link  -->
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+<!--<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">-->
+<!--<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>-->
 
 <div id="gitalk-container"></div>
     <script type="text/javascript">
