--- a/about.html
+++ b/about.html
@@ -16,14 +16,22 @@ multilingual: true
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-        积土成山 非斯须之作</p></blockquote>
+    <blockquote>
+        <p>
+            冰冻三尺 非一日之寒
+            <br>
+            积土成山 非斯须之作
+        </p>
+    </blockquote>
 
 
-    <p>Hey，我是<strong>王石磊(fsoooo)</strong>，一只后端程序猿，现在工作在帝都。</p>
-
+    <p>Hey，我是<strong>王石磊(fsoooo)</strong>，进化程度不明，多出没于[博客](https://fsoooo.github.io)、[微博](weibo.com/fsoooo)、[知乎](https://www.zhihu.com/people/fsoooo/pins/posts)、、[简书](https://www.jianshu.com/u/910c6f95a495) 、[Github](http://github.com/fsoooo)、[Twitter](https://twitter.com/fstoooo/)等地带，绝招尚在开发中。</p>
+    <p>职业是软件工程师，工作在帝都，目前在 [智驿信息](https://www.innfotech.com/) 任职。曾在张家口浩源电子科技有限公司和北京天眼互联科技有限公司任后端开发工程师一职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
-
+    <p>后端：PHP+JAVA</p>
+    <p>前端：MiniProgram+Vue</p>
+    <p>前端：MiniProgram+Vue</p>
+    <p>邮箱：fsoooo@126.com</p>
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>
         与 <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。
         我在GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与 简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉fsoooo</a>。如果有什么问题，欢迎提出探讨~</p>
