--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@ multilingual: true
         等地带，绝招尚在开发中。
     </p>
 
-    <p>职业是软件工程师，工作在帝都，目前在
-        <a href="https://www.innfotech.com/"><b>[智驿信息]</b></a>
+    <p>职业是软件工程师，工作在帝都，目前在任职于
+        <a href="https://www.innfotech.com/"><b>[北京智驿信息技术有限责任公司]</b></a>
         。曾在<b>[张家口浩源电子科技有限公司]</b>和<b>[北京天眼互联科技有限公司]</b>任后端开发工程师一职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
     <p>后端：PHP+JAVA</p>
