--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@ multilingual: true
     <p>后端：PHP+JAVA</p>
     <p>前端：MiniProgram+Vue+H5</p>
     <p>邮箱：fsoooo@126.com</p>
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>
-        与 <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。
-        我在GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与 简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉fsoooo</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p><b>PS:</b>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>
+        与 <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。<br>
+        我的GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与 简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉fsoooo</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
@@ -55,7 +55,6 @@ multilingual: true
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
