--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is fsoooo's Blog."
+description: "梦想还是要有的，万一实现了呢？"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
