--- a/about.html
+++ b/about.html
@@ -35,22 +35,53 @@ multilingual: true
         <a href="https://www.innfotech.com/"><b>[北京智驿信息技术有限责任公司]</b></a>
         。曾在<b>[张家口浩源电子科技有限公司]</b>和<b>[北京天眼互联科技有限公司]</b>任后端开发工程师一职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
-    <p>后端：PHP+JAVA</p>
-    <p>前端：MiniProgram+Vue+H5</p>
-    <p>邮箱：fsoooo@126.com</p>
-    <p><b>PS:</b>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>
-        与 <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。<br>
-        我的GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与 简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉fsoooo</a>。如果有什么问题，欢迎提出探讨~</p>
 
-    <p></p>
-    
+    <h5>Professional Skills</h5>
+    <ul>
+        <li>后端开发：PHP/Java</li>
+        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii（laravel框架使用了两年）</li>
+        <li>数据库相关：MySQL/主从读写/SQL优化</li>
+        <li>NoSql相关: Redis/Memecached/MongoDB</li>
+        <li>Linux相关：LAMP/LNMP编译安装、负载、代理、并发优化</li>
+        <li>前端开发：Vue/小程序/Html5/JavaScript/Bootstrap/jQuery</li>
+        <li> 版本管理和自动化部署工具：Git/Svn/Composer/Jenkins</li>
+        <li>单元测试：PHPUnit/SimpleTest</li>
+        <li> 网络协议相关：HTTP/HTTPS/RPC</li>
+        <li>其他: Apache 压力测试，Charles抓包测试，git-flow工作流</li>
+        <li>学习计划：Go/Python，近期在学习Go和Lua脚本</li>
+        <li>邮箱：fsoooo@126.com</li>
+    </ul>
+
+    <h5>Personal Evaluation</h5>
+    <p>
+        3年Web开发经验，积累了较多的业务和开发经验，能独立完成Web 应用的开发。
+        熟练使用PHP和Java进行web开发；web前端方面熟悉Vue和小程序以及常用的H5。
+        乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。
+        有良好的代码编程习惯及及较强的文档编写能力，拥有较强的工作责任感。
+        对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。
+        拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。
+    </p>
+
+
+    <p>
+        <b>PS:</b>
+        这是我的利用
+        <a href="https://pages.github.com/">GitHub Pages</a>
+        与
+        <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。<br>
+        我的GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与
+        简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉赵客缦胡缨v吴钩霜雪明</a>。
+        如果有什么问题，欢迎提出探讨~
+    </p>
+
+
     <h5>Talks</h5>
-
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
+
 </div>
 
 
@@ -65,15 +96,15 @@ multilingual: true
     window.addEventListener('hashchange', _render);
 
     // handle render
-    function _render(){
+    function _render() {
         var _hash = window.location.hash;
         // en
-        if(_hash == "#en"){
+        if (_hash == "#en") {
             $select.selectedIndex = 1;
             $en.style.display = "block";
             $zh.style.display = "none";
-        // zh by default
-        }else{
+            // zh by default
+        } else {
             // not trigger onChange, otherwise cause a loop call.
             $select.selectedIndex = 0;
             $zh.style.display = "block";
@@ -82,10 +113,10 @@ multilingual: true
     }
 
     // handle select change
-    function onLanChange(index){
-        if(index == 0){
+    function onLanChange(index) {
+        if (index == 0) {
             window.location.hash = "#zh"
-        }else{
+        } else {
             window.location.hash = "#en"
         }
     }
@@ -102,22 +133,27 @@ multilingual: true
 <!--<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>-->
 
 <div id="gitalk-container"></div>
-    <script type="text/javascript">
+<script type="text/javascript">
     var gitalk = new Gitalk({
-    clientID: '{{site.gitalk.clientID}}',
-    clientSecret: '{{site.gitalk.clientSecret}}',
-    repo: '{{site.gitalk.repo}}',
-    owner: '{{site.gitalk.owner}}',
-    admin: ['{{site.gitalk.admin}}'],
-    distractionFreeMode: {{site.gitalk.distractionFreeMode}},
+        clientID: '{{site.gitalk.clientID}}',
+        clientSecret: '{{site.gitalk.clientSecret}}',
+        repo: '{{site.gitalk.repo}}',
+        owner: '{{site.gitalk.owner}}',
+        admin: ['{{site.gitalk.admin}}'],
+        distractionFreeMode: {
+    {
+        site.gitalk.distractionFreeMode
+    }
+    },
     id: 'about',
-    });
+    })
+    ;
     gitalk.render('gitalk-container');
 </script>
 {% endif %}
 <!-- Gitalk end -->
 
- <!-- disqus 评论框 start  -->
+<!-- disqus 评论框 start  -->
 {% if site.disqus.enable %}
 
 <div class="comment">
@@ -133,8 +169,10 @@ multilingual: true
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
     var disqus_url = "{{site.url}}{{page.url}}";
 
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+    (function () {
+        var dsq = document.createElement('script');
+        dsq.type = 'text/javascript';
+        dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
