--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 人生是一场独自的修行
 header-img: "img/tag-bg.jpg"
 ---
 
