--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 title: Tags
 layout: default
-description: 人生是一场独自的修行
-header-img: "img/tag-bg.jpg"
+description: 人生是一场孤独的修行
+header-img: "img/fighting.jpg"
 ---
 
 <!-- Page Header -->
