--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: 人生是一场孤独的修行
-header-img: "img/fighting.jpg"
+header-img: "img/tag-bg.jpg"
 ---
 
 <!-- Page Header -->
