--- a/about.html
+++ b/about.html
@@ -19,9 +19,8 @@ multilingual: true
     </blockquote>
 
 
-    <p>
+     <p>
         Hey，我是<strong>王石磊(fsoooo)</strong>，进化程度不明，多出没于
-        <a href="https://fsoooo.github.io">博客</a>、
         <a href="https://weibo.com/fsoooo">微博</a>、
         <a href="www.zhihu.com/people/fsoooo/pins/posts">知乎</a>、
         <a href="https://www.jianshu.com/u/910c6f95a495">简书</a>、
@@ -32,8 +31,8 @@ multilingual: true
     </p>
 
     <p>职业是软件工程师，工作在帝都，目前在任职于
-        <a href="https://www.innfotech.com/"><b>[北京智驿信息技术有限责任公司]</b></a>
-        。曾在<b>[张家口浩源电子科技有限公司]</b>和<b>[北京天眼互联科技有限公司]</b>任后端开发工程师一职。</p>
+        <a href="https://www.innfotech.com/"><b>[北京网御星云信息技术有限公司]</b></a>
+        。曾在<b>[北京智驿信息技术有限责任公司]</b>和<b>[北京天眼互联科技有限公司]</b>任后端开发工程师一职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
 
     <h5>Professional Skills</h5>
@@ -44,9 +43,10 @@ multilingual: true
         <li>NoSql相关: Redis/Memecached/MongoDB</li>
         <li>Linux相关：LAMP/LNMP编译安装、负载、代理、并发优化</li>
         <li>前端开发：Vue/小程序/Html5/JavaScript/Bootstrap/jQuery</li>
-        <li> 版本管理和自动化部署工具：Git/Svn/Composer/Jenkins</li>
+        <li>版本管理和自动化部署工具：Git/Svn/Composer/Jenkins</li>
         <li>单元测试：PHPUnit/SimpleTest</li>
-        <li> 网络协议相关：HTTP/HTTPS/RPC</li>
+        <li>语言相关：英语有良好的读写能力（CET-4）</li>
+        <li>网络协议相关：HTTP/HTTPS/RPC</li>
         <li>其他: Apache 压力测试，Charles抓包测试，git-flow工作流</li>
         <li>学习计划：Go/Python，近期在学习Go和Lua脚本</li>
         <li>邮箱：fsoooo@126.com</li>
