--- a/about.html
+++ b/about.html
@@ -31,14 +31,14 @@ multilingual: true
     </p>
 
     <p>职业是软件工程师，工作在帝都，目前在任职于
-        <a href="http://www.leadsec.com.cn/"><b>[北京网御星云信息技术有限公司]</b></a>
+        <a href="http://www.leadsec.com.cn/"><b>[北京启明星辰信息安全技术有限公司]</b></a>
         。曾在<a href="https://www.innfotech.com/"><b>[北京智驿信息技术有限责任公司]</b></a>和<b>[北京天眼互联科技有限公司]</b>任后端开发工程师一职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
 
     <h5>Professional Skills</h5>
     <ul>
         <li>后端开发：PHP/Java</li>
-        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii（laravel框架使用了两年）</li>
+        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii（laravel框架使用了三年）</li>
         <li>数据库相关：MySQL/主从读写/SQL优化</li>
         <li>NoSql相关: Redis/Memecached/MongoDB</li>
         <li>Linux相关：LAMP/LNMP编译安装、负载、代理、并发优化</li>
@@ -47,7 +47,7 @@ multilingual: true
         <li>单元测试：PHPUnit/SimpleTest</li>
         <li>语言相关：英语有良好的读写能力（CET-4）</li>
         <li>网络协议相关：HTTP/HTTPS/RPC</li>
-        <li>其他: Apache 压力测试，Charles抓包测试，git-flow工作流</li>
+        <li>其他: Apache 压力测试，Charles抓包测试，git-flow工作流，Shell脚本</li>
         <li>学习计划：Go/Python，近期在学习Go和Lua脚本</li>
         <li>邮箱：fsoooo@126.com</li>
     </ul>
