--- a/about.html
+++ b/about.html
@@ -30,35 +30,38 @@ multilingual: true
         等地带，绝招尚在开发中。
     </p>
 
-    <p>职业是软件工程师，工作在帝都，目前在任职于
-        <a href="https://www.venustech.com.cn/"><b>『北京启明星辰信息安全技术有限公司』</b></a>。
-        <br/>曾在<a href="https://www.innfotech.com/"><b> 『北京智驿信息技术有限责任公司』 </b></a>和<b>『北京天眼互联科技有限公司』</b>任职。</p>
+    <p>职业是软件工程师，工作从帝都换到了天津，目前在任职于
+        <a href="https://www.venustech.com.cn/"><b>『中交智运有限公司』</b></a>。
+        <br/>曾在<a href="https://www.innfotech.com/"><b>『北京启明星辰信息安全技术有限公司』</b><b> 『北京智驿信息技术有限责任公司』 </b></a>和<b>『北京天眼互联科技有限公司』</b>任职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
 
     <h5>Professional Skills</h5>
     <ul>
-        <li>后端开发：PHP/Java</li>
-        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii（laravel框架使用了三年）</li>
+        <li>后端开发：PHP/Java/Golang</li>
+        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii</li>
         <li>数据库相关：MySQL/主从读写/SQL优化</li>
         <li>NoSql相关: Redis/Memecached/MongoDB</li>
         <li>Linux相关：LAMP/LNMP编译安装、负载、代理、并发优化</li>
-        <li>前端开发：Vue/小程序/Html5/JavaScript/Bootstrap/jQuery</li>
+        <li>前端开发：Vue/Angular/React/微信小程序</li>
         <li>版本管理和自动化部署工具：Git/Svn/Composer/Jenkins</li>
         <li>单元测试：PHPUnit/SimpleTest</li>
         <li>语言相关：英语有良好的读写能力（CET-4）</li>
         <li>网络协议相关：HTTP/HTTPS/RPC</li>
-        <li>其他: Apache 压力测试，Charles抓包测试，git-flow工作流，Shell脚本</li>
+        <li>其他: Apache 压力测试，Charles抓包测试，BurpSuite网络安全渗透测试，Shell脚本</li>
         <li>学习计划：Go/Python，近期在学习Go和Lua脚本</li>
         <li>邮箱：fsoooo@126.com</li>
     </ul>
 
     <h5>Personal Evaluation</h5>
     <p>
-        3年Web开发经验，积累了较多的业务和开发经验，能独立完成Web 应用的开发。
-        熟练使用PHP和Java进行web开发；web前端方面熟悉Vue和小程序以及常用的H5。
-        乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。
-        有良好的代码编程习惯及及较强的文档编写能力，拥有较强的工作责任感。
-        对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。
+        5年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；有良好的代码编程习惯及及较强的文档编写、阅读能力，有较高的编程职业素养和规范。
+        3年的团队管理经验，做过多个业务产线和项目的负责人，熟悉常见的业务处理，项目管理经验丰富，能领导、协助团队完成任务；
+        对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。有很强的工作责任感，工作效率比较高，
+        能合理安排工作分工和时间周期，高效快速完成领导安排的任务；
+        有很强的团队合作精神，能快速融入团队，乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。
+        3年以来，一直从事信息安全行业，多次参加护网行动和保密项目的开发维护，有较强的安全保密意识和安全防范经验；
+        参加过多次保密审查和保密教育培训，成绩优异，获得过保密教育培训证书。
+        解决问题能力强，能快速定位问题，给出解决方案，保障项目的正常运行；多次独立出差解决现场问题，能较好的解决满足客户的需求。
         拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。
     </p>
 
