--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ multilingual: true
      <p>
         Hey，我是<strong>王石磊(fsoooo)</strong>，进化程度不明，多出没于
         <a href="https://weibo.com/fsoooo">微博</a>、
-        <a href="www.zhihu.com/people/fsoooo/pins/posts">知乎</a>、
+        <a href="https://www.zhihu.com/people/fsoooo/pins/posts">知乎</a>、
         <a href="https://www.jianshu.com/u/910c6f95a495">简书</a>、
         <a href="http://github.com/fsoooo">Github</a>、
         <a href="http://github.com/fsoooo">Gitee</a>、
@@ -32,7 +32,8 @@ multilingual: true
 
     <p>职业是软件工程师，工作从帝都换到了天津，目前在任职于
         <a href="https://www.venustech.com.cn/"><b>『中交智运有限公司』</b></a>。
-        <br/>曾在<a href="https://www.innfotech.com/"><b>『北京启明星辰信息安全技术有限公司』</b><b> 『北京智驿信息技术有限责任公司』 </b></a>和<b>『北京天眼互联科技有限公司』</b>任职。</p>
+        <br/>曾在<a href="https://www.venustech.com.cn/"><b> 『北京启明星辰信息安全技术有限公司』</b></a>
+        <a href="https://www.innfotech.com/"><b> 『北京智驿信息技术有限责任公司』 </b></a>和<b>『北京天眼互联科技有限公司』</b>任职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
 
     <h5>Professional Skills</h5>
@@ -54,15 +55,15 @@ multilingual: true
 
     <h5>Personal Evaluation</h5>
     <p>
-        5年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；有良好的代码编程习惯及及较强的文档编写、阅读能力，有较高的编程职业素养和规范。
-        3年的团队管理经验，做过多个业务产线和项目的负责人，熟悉常见的业务处理，项目管理经验丰富，能领导、协助团队完成任务；
-        对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。有很强的工作责任感，工作效率比较高，
-        能合理安排工作分工和时间周期，高效快速完成领导安排的任务；
-        有很强的团队合作精神，能快速融入团队，乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。
-        3年以来，一直从事信息安全行业，多次参加护网行动和保密项目的开发维护，有较强的安全保密意识和安全防范经验；
-        参加过多次保密审查和保密教育培训，成绩优异，获得过保密教育培训证书。
-        解决问题能力强，能快速定位问题，给出解决方案，保障项目的正常运行；多次独立出差解决现场问题，能较好的解决满足客户的需求。
-        拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。
+        <p>5年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；有良好的代码编程习惯及及较强的文档编写、阅读能力，有较高的编程职业素养和规范。</p>
+        <p>3年的团队管理经验，做过多个业务产线和项目的负责人，熟悉常见的业务处理，项目管理经验丰富，能领导、协助团队完成任务；</p>
+        <p>对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。有很强的工作责任感，工作效率比较高，</p>
+        <p>能合理安排工作分工和时间周期，高效快速完成领导安排的任务；</p>
+        <p>有很强的团队合作精神，能快速融入团队，乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。</p>
+        <p>3年以来，一直从事信息安全行业，多次参加护网行动和保密项目的开发维护，有较强的安全保密意识和安全防范经验；</p>
+        <p>3参加过多次保密审查和保密教育培训，成绩优异，获得过保密教育培训证书。</p>
+        <p>解决问题能力强，能快速定位问题，给出解决方案，保障项目的正常运行；多次独立出差解决现场问题，能较好的解决满足客户的需求。</p>
+        <p>拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。</p>
     </p>
 
 
