20230217-重新更新个人博客

--- a/about.html
+++ b/about.html
@@ -38,31 +38,34 @@ multilingual: true
     <h5>Professional Skills</h5>
     <ul>
         <li>后端开发：PHP/Java/Golang</li>
-        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii</li>
-        <li>数据库相关：MySQL/主从读写/SQL优化</li>
+        <li>PHP框架：Laravel/ThinkPHP/CodeIgniter/Yii/Swoole</li>
+        <li>数据库相关：MySQL/主从复制/读写分离/分库分表/SQL优化/大数据处理</li>
         <li>NoSql相关: Redis/Memecached/MongoDB</li>
-        <li>Linux相关：LAMP/LNMP编译安装、负载、代理、并发优化</li>
+        <li>Linux相关：LAMP/LNMP编译安装/负载均衡/反向代理/并发优化/守护进程、看门狗、</li>
         <li>前端开发：Vue/Angular/React/微信小程序</li>
         <li>版本管理和自动化部署工具：Git/Svn/Composer/Jenkins</li>
         <li>单元测试：PHPUnit/SimpleTest</li>
         <li>语言相关：英语有良好的读写能力（CET-4）</li>
         <li>网络协议相关：HTTP/HTTPS/RPC</li>
-        <li>其他: Apache 压力测试，Charles抓包测试，BurpSuite网络安全渗透测试，Shell脚本</li>
+        <li>其他: Apache 压力测试，Charles抓包测试，BurpSuite渗透测试，Shell脚本、SQL注入、命令行注入</li>
         <li>学习计划：Go/Python，近期在学习Go和Lua脚本</li>
         <li>邮箱：fsoooo@126.com</li>
     </ul>
 
     <h5>Personal Evaluation</h5>
     <p>
-        <p>5年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；有良好的代码编程习惯及及较强的文档编写、阅读能力，有较高的编程职业素养和规范。</p>
-        <p>3年的团队管理经验，做过多个业务产线和项目的负责人，熟悉常见的业务处理，项目管理经验丰富，能领导、协助团队完成任务；</p>
-        <p>对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。有很强的工作责任感，工作效率比较高，</p>
-        <p>能合理安排工作分工和时间周期，高效快速完成领导安排的任务；</p>
-        <p>有很强的团队合作精神，能快速融入团队，乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。</p>
-        <p>3年以来，一直从事信息安全行业，多次参加护网行动和保密项目的开发维护，有较强的安全保密意识和安全防范经验；</p>
-        <p>3参加过多次保密审查和保密教育培训，成绩优异，获得过保密教育培训证书。</p>
-        <p>解决问题能力强，能快速定位问题，给出解决方案，保障项目的正常运行；多次独立出差解决现场问题，能较好的解决满足客户的需求。</p>
-        <p>拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。</p>
+        5年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；<br/>
+        有良好的代码编程习惯及及较强的文档编写、阅读能力，有较高的编程职业素养和规范。<br/>
+
+        3年的团队管理经验，做过多个业务产线和项目的负责人，熟悉常见的业务处理，项目管理经验丰富，能领导、协助团队完成任务；<br/>
+        对工作尽职尽责，能承受较大的工作的压力，乐于从事有挑战性的工作。有很强的工作责任感，工作效率比较高，<br/>
+        能合理安排工作分工和时间周期，高效快速完成领导安排的任务；<br/>
+        有很强的团队合作精神，能快速融入团队，乐于与用户以及同事和领导沟通，能快速解决项目遇到的问题。<br/>
+
+        3年以来，一直从事信息安全行业，多次参加护网行动和保密项目的开发维护，有较强的安全保密意识和安全防范经验；<br/>
+        参加过多次保密审查和保密教育培训，成绩优异，获得过保密教育培训证书。<br/>
+        解决问题能力强，能快速定位问题，给出解决方案，保障项目的正常运行；多次独立出差解决现场问题，能较好的解决满足客户的需求。<br/>
+        拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。<br/>
     </p>
 
 
