--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ multilingual: true
     </p>
 
     <p>职业是软件工程师，工作从帝都换到了天津，目前在任职于
-        <a href="https://www.venustech.com.cn/"><b>『中交智运有限公司』</b></a>。
+        <a href="https://www.ccccit.com.cn/home"><b>『中交智运有限公司』</b></a>。
         <br/>曾在<a href="https://www.venustech.com.cn/"><b> 『北京启明星辰信息安全技术有限公司』</b></a>
         <a href="https://www.innfotech.com/"><b> 『北京智驿信息技术有限责任公司』 </b></a>和<b>『北京天眼互联科技有限公司』</b>任职。</p>
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
