重新更新个人博客

--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@ multilingual: true
     </p>
 
     <p>职业是软件工程师，工作从帝都换到了天津，目前在任职于
-        <a href="https://www.ccccit.com.cn/home"><b>『中交智运有限公司』</b></a>。
+        <a href="https://www.ccccit.com.cn"><b>『中交智运有限公司』</b></a>。
         <br/>曾在<a href="https://www.venustech.com.cn/"><b> 『北京启明星辰信息安全技术有限公司』</b></a>
         <a href="https://www.innfotech.com/"><b> 『北京智驿信息技术有限责任公司』 </b></a>和<b>『北京天眼互联科技有限公司』</b>任职。</p>
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常摄影和篆刻。</p>
+    <p>工作、学习之余，我还是一个摄影爱好者，同时也非常篆刻和健身。</p>
 
     <h5>Professional Skills</h5>
     <ul>
@@ -54,7 +54,7 @@ multilingual: true
 
     <h5>Personal Evaluation</h5>
     <p>
-        5年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；<br/>
+        6年WEB开发经验，有扎实的编程基础和业务梳理能力，能独立完成WEB应用的开发和维护；<br/>
         有良好的代码编程习惯及及较强的文档编写、阅读能力，有较高的编程职业素养和规范。<br/><br/>
 
         3年的团队管理经验，做过多个业务产线和项目的负责人，熟悉常见的业务处理，项目管理经验丰富，能领导、协助团队完成任务；<br/>
