重新更新个人博客

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "梦想还是要有的，万一实现了呢？"
-header-img: "img/about-bg.jpg"
+header-img: "img/about-bg-img.jpg"
 multilingual: true
 ---
 
@@ -67,27 +67,6 @@ multilingual: true
         解决问题能力强，能快速定位问题，给出解决方案，保障项目的正常运行；多次独立出差解决现场问题，能较好的解决满足客户的需求。<br/>
         拥有 Geek 精神，热爱开源，逻辑思维能力强，思路清楚，学习能力强，对新技术有着强烈的好奇心。<br/>
     </p>
-
-
-    <p>
-        <b>PS:</b>
-        这是我的利用
-        <a href="https://pages.github.com/">GitHub Pages</a>
-        与
-        <a href="https://www.jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。<br>
-        我的GitHub主页<a href="https://github.com/fsoooo">👉GitHub·fsoooo</a> 与
-        简书主页<a href="https://www.jianshu.com/u/910c6f95a495">👉赵客缦胡缨v吴钩霜雪明</a>。
-        如果有什么问题，欢迎提出探讨~
-    </p>
-
-
-    <h5>Talks</h5>
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
-
 </div>
 
 
